Migration to JDK 25 and updates